--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,3 +12,11 @@
     align-items: center;
     justify-content: space-between;
 }
+
+
+        body {
+            background-image: url('../img/Restoran.jpg'); /* Sesuaikan path jika perlu */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
